# swarm-sim

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  PHASE5.md  README.md  THIRD_PARTY_LICENSES  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docker/scripts/: build.sh  publish.sh  run.sh
docs/: REFACTORING_PLAN.md  architecture.md  contributing.md  phase9-tactical-overwatch.md  user-guide.md
docs/api/: coordination.md  core.md  perception.md  ros2.md
models/DroneTemplate/: model.config  model.sdf
scripts/: cleanup.sh  count_loc.py  fly_swarm_pymavlink.py  generate_terrain_world.py  generate_world.py  launch_sitl.py  run_integration_tests.py  run_phase3_test.py  run_tests.py  setup_env.sh  test_connection.py  test_fleet.py  test_offboard.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py
swarm/: __init__.py
swarm/behaviors/: __init__.py
swarm/coordination/: __init__.py  failure_handler.py  formations.py  leader_follower.py  missions.py  pursuit_controller.py  search_patterns.py  swarm_controller.py
swarm/core/: __init__.py  config.py  drone.py  fleet.py
swarm/missions/: __init__.py  autonomous_mission.py  terrain_config.py
swarm/navigation/: __init__.py  config.py  ekf.py  gps_jammer.py  imu_handler.py  position_source.py  semantic_landmarks.py  utils.py  vio_estimator.py  visual_odometry.py
swarm/perception/: __init__.py  camera.py  detector.py  tracker.py
swarm/simulation/: __init__.py  sim_manager.py  sitl_launcher.py  world_generator.py
swarm_ros/: CMakeLists.txt  package.xml
swarm_ros/config/: swarm_params.yaml
swarm_ros/launch/: drone.launch.py  perception.launch.py  simulation.launch.py
swarm_ros/msg/: Detection.msg  DetectionArray.msg  DroneIntent.msg  DroneState.msg  FormationRole.msg  SwarmStatus.msg  VIOState.msg
swarm_ros/scripts/: drone_node  mission_coordinator  perception_node  swarm_bridge  vio_node
swarm_ros/srv/: EmergencyCommand.srv  SetFormation.srv
swarm_ros/swarm_ros/: __init__.py  detection_tracker.py  drone_node.py  mission_coordinator.py  neighbor_tracker.py  perception_node.py  swarm_bridge.py  vio_node.py
swarm_ros/test/: test_neighbor_tracker.py
tests/: __init__.py  conftest.py  test_gps_jammer.py  test_navigation.py  test_phase1.py  test_phase2.py  test_phase3.py  test_search_patterns.py
tests/simulation/: __init__.py  test_swarm.py
tests/unit/: __init__.py  test_config.py  test_formations.py  test_pursuit.py  test_search_patterns.py
worlds/: multi_drone.sdf.jinja  multi_drone_6.sdf  perception_test.sdf  single_drone.sdf  terrain.sdf.jinja  terrain_urban_4.sdf
worlds/templates/: basic.sdf.jinja  complex.sdf.jinja
